--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "converter",
+  "name": "dxf-converter",
   "version": "1.0.0",
   "description": "dxf converter for course work. Convert polyline using LAR vectors.",
   "private": true,
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/gtt142/DXF-converter#readme",
   "devDependencies": {
+    "documentation": "^9.3.1",
     "eslint": "^5.16.0",
+    "jsdoc": "^3.5.5",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
   }
